finished the styles a desgin mobile

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 </head>
 
-<body class="inter-font-family">
+<body class="lexend-deca-font-family">
 
   <article class="container-component">
     <div class="image-hero">
@@ -31,22 +31,22 @@
     </div>
 
     <div class="container-description">
-      <div class="main-description">
-        <h1>Get <span>insights</span> that help your business grow.</h1>
-        <p class="lexend-deca-font-family">Discover the benefits of data analytics and make better decisions regarding
+      <div class="main-description inter-font-family">
+        <h1 class="lexend-deca-font-family">Get <span>insights</span> that help your business grow.</h1>
+        <p>Discover the benefits of data analytics and make better decisions regarding
           revenue, customer
           experience, and overall efficiency.</p>
       </div>
 
       <div class="social-icons">
         <span>10k+</span>
-        <p class="lexend-deca-font-family">companies</p>
+        <p class="inter-font-family">companies</p>
 
         <span>314</span>
-        <p class="lexend-deca-font-family">templates</p>
+        <p class="inter-font-family">templates</p>
 
         <span>12m+</span>
-        <p class="lexend-deca-font-family">queries</p>
+        <p class="inter-font-family">queries</p>
 
       </div>
     </div>
