--- a/index.html
+++ b/index.html
@@ -31,22 +31,22 @@
     </div>
 
     <div class="container-description">
-      <div class="main-description inter-font-family">
-        <h1 class="lexend-deca-font-family">Get <span>insights</span> that help your business grow.</h1>
+      <div class="main-description lexend-deca-font-family">
+        <h1 class="inter-font-family">Get <span>insights</span> that help your business grow.</h1>
         <p>Discover the benefits of data analytics and make better decisions regarding
           revenue, customer
           experience, and overall efficiency.</p>
       </div>
 
       <div class="social-icons">
-        <span>10k+</span>
-        <p class="inter-font-family">companies</p>
+        <span class="inter-font-family">10k+</span>
+        <p class="lexend-deca-font-family">companies</p>
 
-        <span>314</span>
-        <p class="inter-font-family">templates</p>
+        <span class="inter-font-family">314</span>
+        <p class="lexend-deca-font-family">templates</p>
 
-        <span>12m+</span>
-        <p class="inter-font-family">queries</p>
+        <span class="inter-font-family">12M+</span>
+        <p class="lexend-deca-font-family">queries</p>
 
       </div>
     </div>
