finished the style a desktop design

--- a/index.html
+++ b/index.html
@@ -39,16 +39,21 @@
       </div>
 
       <div class="social-icons">
-        <span class="inter-font-family">10k+</span>
-        <p class="lexend-deca-font-family">companies</p>
 
-        <span class="inter-font-family">314</span>
-        <p class="lexend-deca-font-family">templates</p>
-
-        <span class="inter-font-family">12M+</span>
-        <p class="lexend-deca-font-family">queries</p>
-
+        <div class="social-stat">
+          <span class="inter-font-family">10k+</span>
+          <p class="lexend-deca-font-family">companies</p>
+        </div>
+        <div class="social-stat">
+          <span class="inter-font-family">314</span>
+          <p class="lexend-deca-font-family">templates</p>
+        </div>
+        <div class="social-stat">
+          <span class="inter-font-family">12M+</span>
+          <p class="lexend-deca-font-family">queries</p>
+        </div>
       </div>
+
     </div>
 
   </article>
